# Deterministic-Memory-Router

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  _ci.yml  doctor_cold.sqlite3  pyproject.toml  pyproject.toml.BROKEN_20260216_010818.bak  pyproject.toml.bak_fix_20260216_044520  pyproject.toml.broken.bak
.github/workflows/: ci-embeddings.yml  ci-emotional-state-tracker.yml  ci.yml  ci.yml.bak
emotional-state-tracker/: README.md  pyproject.toml  ruff.toml
emotional-state-tracker/data/: golden_emotions.json
emotional-state-tracker/scripts/: verify_state.py
emotional-state-tracker/src/: __init__.py  recall.py  tracker.py  vectorize.py
emotional-state-tracker/src/emotional_state_tracker/: __init__.py  recall.py
emotional-state-tracker/tests/: conftest.py  test_recall.py  test_tracker.py  test_vectorize.py
src/dmr/: __init__.py
src/dmr/api/: app.py
src/dmr/cli/: doctor.py  main.py
src/dmr/core/: retrieval.py  signatures.py
src/dmr/index/: __init__.py  faiss_hot.py
src/dmr/metrics/: __init__.py  prom.py
src/dmr/storage/: __init__.py  cold_sqlite.py  redis_hot.py
src/dmr/vectorize/: __init__.py  emotion.py  vectorizer.py
src/memory_router/: __init__.py  cli_multi_agent.py
src/memory_router/batch/: runner.py
src/memory_router/config/: __init__.py  router_config.json
src/memory_router/core/: __init__.py  budgets.py  classifier.py  faiss_store.py  fallback.py  fuser.py  index_store.py  mini_summarizer.py  multi_agent.py  retrieval.py  router_scoring.py  similarity.py  tokens.py  validator.py
src/memory_router/models/: memory_item.py  retrieval.py
src/memory_router/utils/: hashing.py  json_canonical.py  schema_validator.py
tests/: conftest.py  test_cold_fts_invariance.py  test_no_saturation_contract.py  test_restart_invariance_faiss.py
tests/fixtures/: corpus.jsonl
tests/unit/: test_batch_runner_check_golden.py  test_batch_runner_golden.py  test_classifier.py  test_hashing.py  test_m3_fuser_and_schemas.py  test_multi_agent_faiss_deterministic.py  test_retrieval_scoring.py  test_schema_validator.py
(+8 files in other folders)
