[project]
name = "memory-router"
version = "0.1.0"
description = "Deterministic multi-agent memory router with strict schemas, traceability, and offline golden regression runner."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "jsonschema>=4.22",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
[project.scripts]
mem5 = "memory_router.cli_multi_agent:main"
