[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deterministic-memory-router"
version = "2026.0.0"
description = "Deterministic, offline memory layer for AI systems. No cloud. No randomness. No prompt saturation."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Oscar Fuentes"}]
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "redis>=5.0",
  "hiredis>=2.3",
  "numpy>=1.26",
  "prometheus-client>=0.20",
  "pytest>=8.0",
  "faiss-cpu>=1.7.4; platform_system != 'Darwin'",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py310"
